--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic = {extras = ["email"], version = "^2.8.2"}
 sqlalchemy = "^2.0.32"
 pydantic-settings = "^2.4.0"
 alembic = "^1.13.2"
+psycopg = {extras = ["binary"], version = "^3.2.1"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
@@ -19,6 +20,7 @@ pytest-cov = "^5.0.0"
 taskipy = "^1.12.2"
 ruff = "^0.4.8"
 httpx = "^0.27.0"
+testcontainers = "^4.8.0"
 
 [tool.taskipy.tasks]
 lint = 'ruff check . && ruff check . --diff'
